kubernetes-debug/kit/netperf-calico-policy.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: netperf-calico-policy
  labels:
spec:
  order: 10
  selector: app == "netperf-operator"
  ingress:
    - action: Allow
      source:
        selector: app == "netperf-operator"
      # selector: netperf-role == "netperf-client"
    - action: Log
    - action: Deny
  egress:
    - action: Allow
      destination:
        selector: app == "netperf-operator" 
      # selector: netperf-role == "netperf-client"
    - action: Log
    - action: Deny


ingress:
  - action: Allow
    source:
      selector: app == "netperf-operator"
  - action: Log
  - action: Deny
egress:
  - action: Allow
    destination:
      selector: app == "netperf-operator"
  - action: Log
  - action: Deny
spec:
  order: 10
  selector: app == "netperf-operator"
  ingress:
    - action: Allow
      source:
        selector: netperf-type in {"client", "server"}
    # - action: Allow
    #   source:
    #     selector: netperf-role == "netperf-client"
    # - action: Allow
    #   source:
    #     selector: netperf-role == "netperf-server"
    - action: Log
    - action: Deny
  egress:
    - action: Allow
      destination:
        selector: netperf-type in {"client", "server"}
    # - action: Allow
    #   destination:
    #     selector: netperf-role == "netperf-server"
    # - action: Allow
    #   destination:
    #     selector: netperf-role == "netperf-client"
    - action: Log
    - action: Deny
